# xpty

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cmdbuilder.rs  error.rs  lib.rs  serial.rs  unix.rs
src/win/: conpty.rs  mod.rs  procthreadattr.rs  pseudocon.rs
tests/: integration.rs
