[package]
name = "xpty"
version = "0.1.0"
edition = "2021"
authors = ["Wez Furlong", "Bruce Li"]
description = "Cross-platform async-ready PTY interface, forked from portable-pty"
license = "MIT"
repository = "https://github.com/paidaxingyo666/xpty"
keywords = ["pty", "terminal", "cross-platform", "conpty", "pseudoterminal"]
categories = ["os", "command-line-interface"]

[dependencies]
anyhow = "1.0"
downcast-rs = "1.0"
filedescriptor = "0.8.3"
libc = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["term", "fs"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serial2 = { version = "0.2", optional = true }
shell-words = "1.1"

[features]
default = []
serde_support = ["serde"]
serial = ["serial2"]

[target."cfg(windows)".dependencies]
bitflags = "1.3"
lazy_static = "1.4"
shared_library = "0.1"
winapi = { version = "0.3.9", features = [
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "synchapi",
] }
winreg = "0.10"

[dev-dependencies]
futures = "0.3"
smol = "2.0"
