[package]
name = "xpty"
version = "0.2.9"
edition = "2021"
rust-version = "1.70"
authors = ["Wez Furlong", "Bruce Li"]
description = "Cross-platform async-ready PTY interface, forked from portable-pty"
license = "MIT"
repository = "https://github.com/paidaxingyo666/xpty"
keywords = ["pty", "terminal", "cross-platform", "conpty", "pseudoterminal"]
categories = ["os", "command-line-interface"]

[dependencies]
downcast-rs = "2.0"
filedescriptor = "0.8.3"
libc = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["term", "fs"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serial2 = { version = "0.2", optional = true }
shell-words = "1.1"
thiserror = "2"

[features]
default = []
serde_support = ["serde"]
serial = ["serial2"]

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Environment",
] }
winreg = "0.55"

[dev-dependencies]
